# UCSD-RoboFishy

./: .gitignore  ABC Model.ipynb  README.md
Demos/Range/ExposureLaser/: CMakeLists.txt
Documentation/: OpenCV Extractor List.txt  Raspi Common Commands.md  Raspi Setup.md  WiringPi  WiringPi.md  dhcpcd.conf  interfaces  raspi common commands.md  raspi setup.md  raspi zero common commands.txt  raspi zero setup.txt  wpa_supplicant.conf
Mapper/: Cleanup_AUV.cpp  Controller_Functions.cpp  Controls.cpp  Makefile  Mapper.cpp  Mapper.h  Pressure_Sensor_Functions.cpp  README.md  Sensor_Functions.cpp  Temperature_Sensor_Functions.cpp  log_thread.cpp  nav_thread.cpp  read_imu.py  read_pressure.py  read_temp.py  safety_thread.cpp  ui_thread.cpp
Modules/: README.md  TypeDefs.h
Modules/Camera/: Camera.cp  Camera.cpp  Camera.h  Disarm_Laser.cp  Disarm_Laser.cpp  Makefile  writeImage.cpp  writeImages.cpp
Modules/Core/: Core.cpp  Core.h  Makefile
Modules/Odometry/: Makefile  Odometry.cpp  Odometry.h
Modules/RangeFinder/: Disarm_Laser.cp  Makefile  RangeFinder.cpp  RangeFinder.h
Modules/V4L2Control/: Makefile
OpenCV Tests/ExposureLaser/: ExposureLaser.cpp
OpenCV Tests/ExposureTests/: CMakeCache.txt  CMakeLists.txt  ExposureTests  ExposureTests.cpp  Makefile  cmake_install.cmake
OpenCV Tests/FindDiff/: CMakeCache.txt  CMakeLists.txt  FindDiff
OpenCV Tests/FindDiffRecord/: CMakeCache.txt  CMakeLists.txt  FindDiffRecord  FindDiffRecord.cpp  Makefile  cmake_install.cmake  test.avi
OpenCV Tests/FindLaser/: CMakeCache.txt  CMakeLists.txt  FindLaser  FindLaser.cpp  Makefile  cmake_install.cmake
OpenCV Tests/GetHSV/: CMakeCache.txt  CMakeLists.txt  GetHSV  GetHSV.cpp  Makefile  cmake_install.cmake
OpenCV Tests/PoCRangefinder/: CMakeLists.txt  PoCRangefinder.cpp  PoCRangefinder.h  V4L2Control.cpp  V4L2Control.h
OpenCV Tests/SavePictures/: CMakeCache.txt  CMakeLists.txt  SavePictures
OpenCV Tests/SobelPictures/: CMakeCache.txt  Makefile  SobelPictures.cpp  cmake_install.cmake
OpenCV Tests/TakePictures/: cmake_install.cmake
Working/: README.md  time.cpp
Working/CameraCalibration/: CMakeCache.txt  CMakeLists.txt  CameraCalibration  CameraCalibration.cpp  CameraCalibration.h  Makefile  cmake_install.cmake  readme.md
Working/Electronics/: .Disarm_Laser.cpp.swp  BNO055.cpp  BNO055.py  Cleanup_AUV.cpp  Controls.cpp  Ctrl_C.cpp  DS18B20.cpp  Disarm_Laser.cp  Functions.c  Functions.c.save  Functions.cpp  IMU.c  IMU_Functions.cpp  Libraries.h  MS5837.py  MS5837_Functions.cpp  MainScript  MainScript.c  MainScript.cpp  MainScript.sublime-project  MainScript.sublime-workspace  Makefile  Mapper.cpp  Mapper.h  PWM_Driver_Functions.cpp  Pressure_Sensor_Functions.cpp  Protection.cpp  README.txt  Saturate.cpp  Scripps_AUV_Init.cpp  SensorRead.cpp  SetMotor.cpp  SetMotors.cpp  Temperature_Sensor_Functions.cpp  YawController.cpp  bno055_fifo.fifo  bno055_read.py  core.cpp  core.h  feedback.c  (+14 more)
Working/Electronics2/: BNO055.py  CMakeCache.txt  CMakeLists.txt  Functions.c.save  Functions.cpp  Libraries.h  MS5837.h  MS5837.py  MS5837_example.py  Makefile  V4L2Control.h  bno055_fifo.fifo  bno055_fifo.txt  cmake_install.cmake  ms5837_fifo.fifo
Working/FeatureDemo/: CMakeLists.txt  FeatureDemo.cpp
Working/FeatureTracker/: CMakeLists.txt  FeatureTracker.cpp  FeatureTracker.h  Makefile
Working/MotorCalibration/: Makefile  MotorCalibration  MotorCalibration.cpp  MotorCalibration.h
Working/PoCRangefinder/: CMakeCache.txt  CMakeLists.txt  Makefile  PoCRangefinder  PoCRangefinder.cpp  PoCRangefinder.h  PoCRangefinder_Backup.cpp  PoCRangefinder_update.cpp  cmake_install.cmake
(+23 files in other folders)
