cmake_minimum_required(VERSION 2.8)
project( PoCRangefinder )
find_package( OpenCV )
find_package (Threads)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( PoCRangefinder PoCRangefinder.cpp PoCRangefinder.h V4L2Control.cpp V4L2Control.h )
target_link_libraries( PoCRangefinder ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} )
