cmake_minimum_required(VERSION 2.8)
project( MainScript )
find_package( OpenCV )
find_package (Threads)
find_package(PythonLibs REQUIRED)
#find_package(wiringPiPca9685)
#add_library(PCA9685 STATIC IMPORTED)
#set_property(TARGET PCA9685 PROPERTY IMPORTED_LOCATION /usr/lib/libwiringPiPca9685.so)
include_directories(${PYTHON_INCLUDE_DIRS})
include_directories( ${OpenCV_INCLUDE_DIRS} )
#include_directories(/usr/local/include)
#link_directories(/usr/local/lib)
#add_definitions(-std=c++0x -L/usr/lib.libwiringPi.so -lwiringPi -lpthread)
add_definitions(-std=c++0x -L/usr/lib/libwiringPi.so -lwiringPi -lpthread -L/usr/lib/libwiringPiPca9685.so -lwiringPiPca9685)
#add_definitions(-std=c++0x -L/usr/lib.libwiringPiPca9685.so -lwiringPiPca9685)
set(V4L2_FILES V4L2Control.h V4L2Control.cpp)
add_executable( MainScript MainScript.cpp Libraries.h Functions.cpp ${V4L2_FILES} )
target_link_libraries( MainScript ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} ${PYTHON_LIBRARIES})
